7.apr (ws)
      - implemented JACK midi input
05.apr (la)
      - update for Jack 1.9.7 on windows, lower jack version should be ok
        on linux and mac
31.mar (ws)
      - applied patches from miwarre to enhance backward compatibility (#8403/#8405)
30.mar (ws)
      - fix: dont jump cursor back during playback
      - first code for chord articulation editor
28.mar (ws)
      - #8993: regression fix for beam layout
25.mar (ws)
      - new tempo text palette entries
      - new tempo text property: "follow text", tempotext is parsed to determine
        actual tempo.
      - better backward compatibility for copyright text (#9886)
      - fix #9901: changing sound in mixer doesn't update properly
      - fix #9916: ties don't copy
      - do not show nonexistant files in "open recent"
      - fix #9919: error on open/read musicxml was not handled
24.mar (ws)
      - add previous/next button to measure properties dialog
      - draw grips in edit mode always on top of all other elements
      - fix initialization of split-window action
23.mar (ws)
      - new commands: "split measure" and "join measure"
22.mar (ws)
      - new display option: "show unprintable" allows to hide spacer and layout-breaks
      - avoid recursive call of instrument dialog when pressing "i" again when
        dialog is active
      - instrument dialog: allow staff to move to previous or next part with up/down
       (la)
      - add export to MP3 option via lame_enc "a la Audacity"
      - better handling of missing soundfont
20.mar (ws)
      - first implementation of "profiles"; palette changes are recorded in current
        profile; "default" profile is read only
      - allow creation of new text styles
19.mar (la)
      - fix #9830: Percussion sounds not exported correctly in MusicXML
17.mar (ws)
      - enhanced clef layout
16.mar (ws)
      - slur edit mode: dragging the first or last grip on a note