@@ -1,3 +1,5 @@
+8.apr (ws)
+      - autoconnect feature for JACK midi input
 7.apr (ws)
       - implemented JACK midi input
 05.apr (la)
